--- a/index.html
+++ b/index.html
@@ -1,39 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>smart daily Planner</title>>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Daily Planner</title>
 <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 </head>
+
 <body>
-    <h1>🌸 Smart Daily Planner</h1>
 
-<p id="todayDate"></p>
-<p id="quote"></p>
+<h1>📅 Daily Planner</h1>
 
- <h2> Today's schedule (Morning to Night)</h2>
+<div id="datetime"></div>
 
-<input type="text" id="taskInput" placeholder="Enter your task">
-<input type="time" id="taskTime">
+<div class="container">
 
-<select id="priority">
-    <option value="High">🔥 High</option>
-    <option value="Medium">⭐ Medium</option>
-    <option value="Low">🌿 Low</option>
-</select>
+<!-- Top Priorities -->
+<section>
+<h2>Top 3 Priorities</h2>
+<input class="priority" placeholder="Priority 1">
+<input class="priority" placeholder="Priority 2">
+<input class="priority" placeholder="Priority 3">
+</section>
 
-<button onclick="addTask()">Add Task</button>
+<!-- Time Blocks -->
+<section>
+<h2>Time Schedule</h2>
 
-<ul id="taskList"></ul>
+<div class="time-block"><span>9–10</span><input></div>
+<div class="time-block"><span>10–11</span><input></div>
+<div class="time-block"><span>11–12</span><input></div>
+<div class="time-block"><span>12–1</span><input></div>
 
-<div class="progress-container">
-     <div id="progressBar"></div>
+</section>
+
+<!-- Focus Tasks -->
+<section>
+<h2>Focus Tasks</h2>
+<ul id="focusList"></ul>
+
+<input id="focusInput" placeholder="New focus task">
+<button id="addFocusBtn">Add</button>
+</section>
+
+<!-- Revision Tasks -->
+<section>
+<h2>Revision Tasks</h2>
+<ul id="revisionList"></ul>
+
+<input id="revisionInput" placeholder="New revision task">
+<button id="addRevisionBtn">Add</button>
+</section>
+
+<!-- Reminder -->
+<section>
+<h2>Reminder Notification</h2>
+
+<input type="time" id="reminderTime">
+<input id="reminderText" placeholder="Reminder message">
+
+<button id="setReminderBtn">Set Reminder</button>
+</section>
+
 </div>
 
-<p id="progressText"></p>
+<script src="script.js"></script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Colorful Daily Planner</title>
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<h1 class="main-title">✨ Daily Planner</h1>
+
+<div id="datetime"></div>
+
+<div class="container">
+
+<section class="card priorities">
+<h2>🎯 Top Priorities</h2>
+<input class="priority" placeholder="Priority 1">
+<input class="priority" placeholder="Priority 2">
+<input class="priority" placeholder="Priority 3">
+</section>
+
+<section class="card schedule">
+<h2>⏰ Time Schedule</h2>
+
+<div class="time-block"><span>9–10</span><input></div>
+<div class="time-block"><span>10–11</span><input></div>
+<div class="time-block"><span>11–12</span><input></div>
+<div class="time-block"><span>12–1</span><input></div>
+
+</section>
+
+<section class="card focus">
+<h2>🔥 Focus Tasks</h2>
+<ul id="focusList"></ul>
+
+<input id="focusInput" placeholder="New focus task">
+<button id="addFocusBtn">Add Task</button>
+</section>
+
+<section class="card revision">
+<h2>📚 Revision Tasks</h2>
+<ul id="revisionList"></ul>
+
+<input id="revisionInput" placeholder="New revision task">
+<button id="addRevisionBtn">Add Task</button>
+</section>
+
+<section class="card reminder">
+<h2>⏳ Reminder</h2>
+
+<input type="time" id="reminderTime">
+<input id="reminderText" placeholder="Reminder message">
+
+<button id="setReminderBtn">Set Reminder</button>
+</section>
+
+</div>
 
 <script src="script.js"></script>
+
 </body>
 </html>
